--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     background-color: green;
 }
 body{
-    background-image: url("../img/p5.jpg");
+    background-color: blue;
 }
 #pong{
     background-color: white;
